# socrates

./: .gitignore
backend/: README.md  docker-compose.yml  pyproject.toml
backend/app/: cli.py  config.py  db.py  gcp.py  main.py  models.py  security.py  storage.py
backend/app/api/: catalog.py  children.py  grading.py  guidance.py
backend/app/grading/: compare.py  image.py  service.py  vision.py
backend/app/ingest/: extractor.py  gemini_extractor.py  orchestrator.py  pdf.py  taxonomy.py  validate.py
backend/app/printing/: print_pdf.py  qr.py
backend/app/services/: attempts.py
backend/app/static/: tester.html
backend/app/tutor/: base.py  gemini.py  service.py  visuals.py
backend/migrations/: env.py
backend/migrations/versions/: 0d3d05175ab7_submission_and_problem_result.py  9fc198c7efc4_child_pin_hash.py  a165f2d2bbf3_baseline_catalog.py  (+4 more)
backend/tests/: test_app_static.py  test_attempts_service.py  test_catalog_api.py  test_children_api.py  test_children_pin.py  test_cli.py  test_compare.py  test_extractor.py  test_gcp.py  test_gemini_vision.py  test_grading_api.py  test_grading_correct_answer.py  test_grading_e2e.py  test_grading_image.py  test_grading_service.py  test_guidance_api.py  test_health.py  test_models.py  test_models_attempt.py  test_models_grading.py  test_orchestrator.py  test_pdf.py  test_print_pdf.py  test_qr.py  test_scores_endpoint.py  test_security.py  test_storage.py  test_taxonomy.py  test_tester_page.py  test_tutor_gemini.py  test_tutor_models.py  test_tutor_service.py  test_tutor_visuals.py  test_validate.py  test_vision.py
(+48 files in other folders)
