[project]
name = "socrates-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlmodel>=0.0.22",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "aiosqlite>=0.20",
  "pydantic-settings>=2.5",
  "pymupdf>=1.24",
  "google-genai>=0.3",
  "boto3>=1.35",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
]
